replace page_name to page_id

--- a/frappe/translations/af.csv
+++ b/frappe/translations/af.csv
@@ -2428,7 +2428,7 @@ Text Align,Teks uitlyn,
 Text Color,Teks Kleur,
 Text Content,Teksinhoud,
 Text Editor,Teks editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Teks wat vir Link na webbladsy vertoon moet word as hierdie vorm &#39;n webblad het. Skakelroete sal outomaties gegenereer word gebaseer op `page_name` en` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Teks wat vir Link na webbladsy vertoon moet word as hierdie vorm &#39;n webblad het. Skakelroete sal outomaties gegenereer word gebaseer op `page_id` en` parent_website_route`,
 Thank you for your email,Dankie vir jou e-pos,
 Thank you for your interest in subscribing to our updates,Dankie vir u belangstelling om in te teken op ons opdaterings,
 Thank you for your message,Dankie vir jou boodskap,
