--- a/frappe/translations/am.csv
+++ b/frappe/translations/am.csv
@@ -2428,7 +2428,7 @@ Text Align,የጽሁፍ አሰላለፍ,
 Text Color,የጽሁፍ ቀለም,
 Text Content,የጽሑፍ ይዘት,
 Text Editor,ጽሑፍ አርታዒ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,ይህን ቅጽ አንድ ድረ-ገጽ ካለው ጽሑፍ ድረ ገጽ አገናኝ ለ እንዲታዩ. አገናኝ መንገድ በራስ-ሰር page_name` እና `parent_website_route`` ላይ ተመስርተው የመነጩ ይሆናል,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,ይህን ቅጽ አንድ ድረ-ገጽ ካለው ጽሑፍ ድረ ገጽ አገናኝ ለ እንዲታዩ. አገናኝ መንገድ በራስ-ሰር page_id` እና `parent_website_route`` ላይ ተመስርተው የመነጩ ይሆናል,
 Thank you for your email,የእርስዎ ኢሜይል እናመሰግናለን,
 Thank you for your interest in subscribing to our updates,የእኛን ዝማኔዎች ደንበኝነት ላሳዩት ፍላጎት እናመሰግናለን,
 Thank you for your message,ለመልክትዎ አመሰግናለሁ,
