--- a/frappe/translations/bg.csv
+++ b/frappe/translations/bg.csv
@@ -2428,7 +2428,7 @@ Text Align,Текст Подравнен,
 Text Color,Цвят на текста,
 Text Content,Текст съдържание,
 Text Editor,Редактор на текст,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Текст, за да бъде показана за Линк към Web Page ако този формуляр има уеб страница. Link маршрут автоматично ще се генерира на базата на `page_name` и` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Текст, за да бъде показана за Линк към Web Page ако този формуляр има уеб страница. Link маршрут автоматично ще се генерира на базата на `page_id` и` parent_website_route`",
 Thank you for your email,Благодаря ви за вашия имейл,
 Thank you for your interest in subscribing to our updates,Благодарим ви за проявения интерес към абонирате за нашите новини,
 Thank you for your message,Благодаря ви за вашето съобщение,
