--- a/frappe/translations/bn.csv
+++ b/frappe/translations/bn.csv
@@ -2428,7 +2428,7 @@ Text Align,টেক্সট সারিবদ্ধ,
 Text Color,টেক্সট রঙ,
 Text Content,টেক্সট বিষয়বস্তু,
 Text Editor,টেক্সট সম্পাদক,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,এই ফর্মটি একটি ওয়েব পেজ আছে তাহলে টেক্সট ওয়েব পৃষ্ঠা থেকে লিঙ্ক জন্য প্রদর্শন করা হবে. লিংক রুট স্বয়ংক্রিয়ভাবে page_name` এবং `` parent_website_route` উপর ভিত্তি করে তৈরি করা হবে,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,এই ফর্মটি একটি ওয়েব পেজ আছে তাহলে টেক্সট ওয়েব পৃষ্ঠা থেকে লিঙ্ক জন্য প্রদর্শন করা হবে. লিংক রুট স্বয়ংক্রিয়ভাবে page_id` এবং `` parent_website_route` উপর ভিত্তি করে তৈরি করা হবে,
 Thank you for your email,তোমার ই - মেইলের জন্য ধন্যবাদ,
 Thank you for your interest in subscribing to our updates,আমাদের আপডেট সাবস্ক্রাইব আপনার আগ্রহের জন্য আপনাকে ধন্যবাদ,
 Thank you for your message,তোমার বার্তার জন্য তোমাকে ধন্যবাদ,
