--- a/frappe/translations/ca.csv
+++ b/frappe/translations/ca.csv
@@ -2428,7 +2428,7 @@ Text Align,Text Alinear,
 Text Color,Color del text,
 Text Content,contingut de text,
 Text Editor,Editor de text,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,El text que es mostra per enllaçar a la pàgina web si aquest formulari disposa d'una pàgina web. Ruta Enllaç automàticament es genera sobre la base de `page_name` i ` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,El text que es mostra per enllaçar a la pàgina web si aquest formulari disposa d'una pàgina web. Ruta Enllaç automàticament es genera sobre la base de `page_id` i ` parent_website_route`,
 Thank you for your email,Gràcies per el teu email,
 Thank you for your interest in subscribing to our updates,Gràcies pel seu interès en subscriure-vos-hi,
 Thank you for your message,Gràcies pel seu missatge,
