--- a/frappe/translations/cs.csv
+++ b/frappe/translations/cs.csv
@@ -2428,7 +2428,7 @@ Text Align,Zarovnání textu,
 Text Color,Barva textu,
 Text Content,Text Obsah,
 Text Editor,Editor textu,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Text k zobrazení k prolinkování www stránky pokud má tento formulář www stránku. Cesta odkazu bude automaticky generována na základě `page_name` a `parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Text k zobrazení k prolinkování www stránky pokud má tento formulář www stránku. Cesta odkazu bude automaticky generována na základě `page_id` a `parent_website_route`,
 Thank you for your email,Děkujeme za váš e-mail,
 Thank you for your interest in subscribing to our updates,Děkujeme Vám za Váš zájem o přihlášení do našich aktualizací,
 Thank you for your message,Děkujeme Vám za zprávu,
