--- a/frappe/translations/da.csv
+++ b/frappe/translations/da.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekst Juster,
 Text Color,Tekstfarve,
 Text Content,Tekst indhold,
 Text Editor,Teksteditor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Tekst, der skal vises for Link til webside, hvis denne form har en webside. Link rute automatisk genereret baseret på `page_name` og` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Tekst, der skal vises for Link til webside, hvis denne form har en webside. Link rute automatisk genereret baseret på `page_id` og` parent_website_route`",
 Thank you for your email,Tak for din e-mail,
 Thank you for your interest in subscribing to our updates,Tak for din interesse i at abonnere på vores opdateringer,
 Thank you for your message,Tak for din besked,
