--- a/frappe/translations/el.csv
+++ b/frappe/translations/el.csv
@@ -2428,7 +2428,7 @@ Text Align,Στίχοιση κειμένου,
 Text Color,Χρώμα κειμένου,
 Text Content,Περιεχόμενο κειμένου,
 Text Editor,Επεξεργαστής κειμένου,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Το κείμενο που θα εμφανίζεται για το σύνδεσμο προς την ιστοσελίδα, αν αυτή η φόρμα έχει μια ιστοσελίδα. Η διαδρομή του συνδέσμου θα δημιουργείται αυτόματα με βάση τα πεδία `page_name` και `parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Το κείμενο που θα εμφανίζεται για το σύνδεσμο προς την ιστοσελίδα, αν αυτή η φόρμα έχει μια ιστοσελίδα. Η διαδρομή του συνδέσμου θα δημιουργείται αυτόματα με βάση τα πεδία `page_id` και `parent_website_route`",
 Thank you for your email,Σας ευχαριστούμε για το email σας,
 Thank you for your interest in subscribing to our updates,Σας ευχαριστούμε για το ενδιαφέρον σας για την εγγραφή στις ενημερώσεις μας,
 Thank you for your message,Σας ευχαριστούμε για το μήνυμά σας,
