--- a/frappe/translations/et.csv
+++ b/frappe/translations/et.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekst Align,
 Text Color,Teksti värv,
 Text Content,tekst sisu,
 Text Editor,Tekstiredaktor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Tekst kuvatakse Link Web Page juhul, kui see on veebilehele. Link liinil hakkab automaatselt vastavalt sellele, `page_name` ja` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Tekst kuvatakse Link Web Page juhul, kui see on veebilehele. Link liinil hakkab automaatselt vastavalt sellele, `page_id` ja` parent_website_route`",
 Thank you for your email,Täname e-posti,
 Thank you for your interest in subscribing to our updates,Täname huvi tellides meie uuendused,
 Thank you for your message,Täname sõnum,
