--- a/frappe/translations/fi.csv
+++ b/frappe/translations/fi.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekstin kohdistus,
 Text Color,Tekstin väri,
 Text Content,tekstisisältö,
 Text Editor,Tekstin muokkaus,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Teksti linkki verkkosivulle näytetään jos tällä lomakkeella on verkkosivu, linkin reitti muodostuu automaattisesti tyyliin `sivu_nimi` ja` emo_verkkosivu_reitti`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Teksti linkki verkkosivulle näytetään jos tällä lomakkeella on verkkosivu, linkin reitti muodostuu automaattisesti tyyliin `sivu_nimi` ja` emo_verkkosivu_reitti`",
 Thank you for your email,Kiitos viestistäsi,
 Thank you for your interest in subscribing to our updates,Kiitos päivityksen tilaamisesta,
 Thank you for your message,Kiitos viestistäsi,
