--- a/frappe/translations/gu.csv
+++ b/frappe/translations/gu.csv
@@ -2428,7 +2428,7 @@ Text Align,લખાણ સંરેખિત,
 Text Color,ટેક્સ્ટ રંગ,
 Text Content,લખાણ સામગ્રી,
 Text Editor,લખાણ સંપાદક,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"આ ફોર્મ વેબ પાનું છે, તો લખાણ વેબ પૃષ્ઠ પર લિંક માટે પ્રદર્શિત કરવા માટે. લિંક માર્ગ આપોઆપ page_name` અને `parent_website_route`` પર આધારિત પેદા થશે",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"આ ફોર્મ વેબ પાનું છે, તો લખાણ વેબ પૃષ્ઠ પર લિંક માટે પ્રદર્શિત કરવા માટે. લિંક માર્ગ આપોઆપ page_id` અને `parent_website_route`` પર આધારિત પેદા થશે",
 Thank you for your email,તમારા ઇમેઇલ માટે આભાર,
 Thank you for your interest in subscribing to our updates,અમારી સુધારાઓ ઉમેદવારી નોંધાવવા માં તમારા રસ માટે આભાર,
 Thank you for your message,તમારા સંદેશ માટે આભાર,
