--- a/frappe/translations/he.csv
+++ b/frappe/translations/he.csv
@@ -2428,7 +2428,7 @@ Text Align,טקסט יישור,
 Text Color,צבע טקסט,
 Text Content,תוכן טקסט,
 Text Editor,עורך טקסט,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,טקסט שיוצג לקישור לדף אינטרנט אם טופס זה יש דף אינטרנט. מסלול קישור יהיה באופן אוטומטי המבוסס על `` page_name` וparent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,טקסט שיוצג לקישור לדף אינטרנט אם טופס זה יש דף אינטרנט. מסלול קישור יהיה באופן אוטומטי המבוסס על `` page_id` וparent_website_route`,
 Thank you for your email,"תודה על הדוא""ל שלך",
 Thank you for your interest in subscribing to our updates,תודה לך על התעניינותך במנוי לעדכונים שלנו,
 Thank you for your message,תודה לך על ההודעה שלך,
