--- a/frappe/translations/hi.csv
+++ b/frappe/translations/hi.csv
@@ -2428,7 +2428,7 @@ Text Align,अक्षर संरेखण,
 Text Color,अक्षर का रंग,
 Text Content,पाठ्य सामग्री,
 Text Editor,लेख संपादक,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"इस फार्म के लिए एक वेब पेज है, तो वेब पेज को जोड़ने वाली लिंक को नाम प्रदान करे। लिंक मार्ग खुद ब खुद `page_name` और  `parent_website_route` से उत्पन्न हो जाएगा।",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"इस फार्म के लिए एक वेब पेज है, तो वेब पेज को जोड़ने वाली लिंक को नाम प्रदान करे। लिंक मार्ग खुद ब खुद `page_id` और  `parent_website_route` से उत्पन्न हो जाएगा।",
 Thank you for your email,आपके ईमेल के लिए धन्यवाद,
 Thank you for your interest in subscribing to our updates,हमारे अद्यतन करने के लिए सदस्यता लेने में आपकी रुचि के लिए धन्यवाद,
 Thank you for your message,अपने संदेश के लिए धन्यवाद,
