--- a/frappe/translations/hr.csv
+++ b/frappe/translations/hr.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekst Poravnajte,
 Text Color,Tekst u boji,
 Text Content,tekstualni sadržaj,
 Text Editor,Tekst Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Tekst koji će biti prikazani na vezu na web stranicu, ako je taj oblik ima web stranicu. Link put će se automatski generira na temelju `page_name` i` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Tekst koji će biti prikazani na vezu na web stranicu, ako je taj oblik ima web stranicu. Link put će se automatski generira na temelju `page_id` i` parent_website_route`",
 Thank you for your email,Hvala vam na e-mail,
 Thank you for your interest in subscribing to our updates,Hvala vam na interesu za pretplate na naše ažuriranja,
 Thank you for your message,Hvala vam za vašu poruku,
