--- a/frappe/translations/hu.csv
+++ b/frappe/translations/hu.csv
@@ -2428,7 +2428,7 @@ Text Align,Szöveg igazítása,
 Text Color,Szöveg színe,
 Text Content,Szöveges tartalom,
 Text Editor,Szövegszerkesztő,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"A megjelenítendő szöveget a weboldalhoz fűzi, ha ennek az űrlapnak van weboldala. Hozzáfűzési útvonalat automatikusan hozza létre a 'page_name' és 'parent_website_route` alapján",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"A megjelenítendő szöveget a weboldalhoz fűzi, ha ennek az űrlapnak van weboldala. Hozzáfűzési útvonalat automatikusan hozza létre a 'page_id' és 'parent_website_route` alapján",
 Thank you for your email,"Köszönjük, a levelét",
 Thank you for your interest in subscribing to our updates,Köszönjük az érdeklődését a feliratkozásával a frissítésekre,
 Thank you for your message,Köszönjük üzenetét,
