--- a/frappe/translations/id.csv
+++ b/frappe/translations/id.csv
@@ -2428,7 +2428,7 @@ Text Align,Teks Align,
 Text Color,Warna Teks,
 Text Content,Konten teks,
 Text Editor,Teks Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Teks yang akan ditampilkan untuk Link ke Halaman Web jika formulir ini memiliki halaman web. Link rute akan secara otomatis dihasilkan berdasarkan `page_name` dan` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Teks yang akan ditampilkan untuk Link ke Halaman Web jika formulir ini memiliki halaman web. Link rute akan secara otomatis dihasilkan berdasarkan `page_id` dan` parent_website_route`,
 Thank you for your email,Terima kasih atas email Anda,
 Thank you for your interest in subscribing to our updates,Terima kasih atas minat anda untuk berlangganan berita kami,
 Thank you for your message,Terima kasih untuk pesan Anda,
