--- a/frappe/translations/is.csv
+++ b/frappe/translations/is.csv
@@ -2428,7 +2428,7 @@ Text Align,jöfnun texta,
 Text Color,Litur texta,
 Text Content,Texti Content,
 Text Editor,Text Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Texti til að sýna fyrir Tengill á vefsíðu, ef þetta form er á vefsíðu. Link leið verður sjálfkrafa byggt á `page_name` og` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Texti til að sýna fyrir Tengill á vefsíðu, ef þetta form er á vefsíðu. Link leið verður sjálfkrafa byggt á `page_id` og` parent_website_route`",
 Thank you for your email,Þakka þér fyrir þinn email,
 Thank you for your interest in subscribing to our updates,Þakka þér fyrir áhuga þinn á að gerast áskrifandi að uppfærslum okkar,
 Thank you for your message,Takk fyrir skilaboðin,
