--- a/frappe/translations/it.csv
+++ b/frappe/translations/it.csv
@@ -2429,7 +2429,7 @@ Text Align,Allineamento testo,
 Text Color,Colore testo,
 Text Content,contenuto Testo,
 Text Editor,Editor di testo,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Testo da visualizzare per collegamento alla pagina Web, se questa forma ha una pagina web. Percorso di collegamento verrà automaticamente generato in base `page_name` e` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Testo da visualizzare per collegamento alla pagina Web, se questa forma ha una pagina web. Percorso di collegamento verrà automaticamente generato in base `page_id` e` parent_website_route`",
 Thank you for your email,Grazie per la vostra e-mail,
 Thank you for your interest in subscribing to our updates,Grazie per il vostro interesse per sottoscrivere i nostri aggiornamenti,
 Thank you for your message,Grazie per il tuo messaggio,
