--- a/frappe/translations/ja.csv
+++ b/frappe/translations/ja.csv
@@ -2428,7 +2428,7 @@ Text Align,行揃え,
 Text Color,テキストの色,
 Text Content,テキストコンテンツ,
 Text Editor,テキストエディタ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,このフォームがウェブページを持っている場合、テキストは、ウェブページへのリンクとして表示されます。リンク先は `page_name`と` parent_website_route`に基づいて自動的に生成されます,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,このフォームがウェブページを持っている場合、テキストは、ウェブページへのリンクとして表示されます。リンク先は `page_id`と` parent_website_route`に基づいて自動的に生成されます,
 Thank you for your email,メールいただきありがとうございます,
 Thank you for your interest in subscribing to our updates,アップデートに関心をお寄せいただきありがとうございます,
 Thank you for your message,メッセージありがとうございました。,
