--- a/frappe/translations/km.csv
+++ b/frappe/translations/km.csv
@@ -2428,7 +2428,7 @@ Text Align,អត្ថបទតម្រឹម,
 Text Color,ពណ៌អត្ថបទ,
 Text Content,មាតិកាអត្ថបទ,
 Text Editor,កម្មវិធីនិពន្ធអត្ថបទ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,អត្ថបទដែលត្រូវបង្ហាញសម្រាប់តំណទៅទំព័របណ្តាញប្រសិនបើសំណុំបែបបទនេះមានទំព័របណ្ដាញ។ ផ្លូវតំណនឹងត្រូវបានបង្កើតដោយស្វ័យប្រវត្តិដែលមានមូលដ្ឋានលើ `` parent_website_route` និង page_name`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,អត្ថបទដែលត្រូវបង្ហាញសម្រាប់តំណទៅទំព័របណ្តាញប្រសិនបើសំណុំបែបបទនេះមានទំព័របណ្ដាញ។ ផ្លូវតំណនឹងត្រូវបានបង្កើតដោយស្វ័យប្រវត្តិដែលមានមូលដ្ឋានលើ `` parent_website_route` និង page_id`,
 Thank you for your email,សូមអរគុណអ្នកសម្រាប់អ៊ីម៉ែលរបស់អ្នក,
 Thank you for your interest in subscribing to our updates,សូមអរគុណចំពោះការចាប់អារម្មណ៍របស់អ្នកក្នុងការធ្វើឱ្យទាន់សម័យជាវរបស់យើង,
 Thank you for your message,សូមអរគុណអ្នកសម្រាប់សាររបស់អ្នក,
