--- a/frappe/translations/ko.csv
+++ b/frappe/translations/ko.csv
@@ -2428,7 +2428,7 @@ Text Align,텍스트 정렬,
 Text Color,텍스트 색상,
 Text Content,텍스트 내용,
 Text Editor,텍스트 편집기,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,이 양식은 웹 페이지가있는 경우 텍스트는 웹 페이지에 링크 표시합니다.링크 경로는 자동으로 page_name`와`parent_website_route``를 기반으로 생성됩니다,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,이 양식은 웹 페이지가있는 경우 텍스트는 웹 페이지에 링크 표시합니다.링크 경로는 자동으로 page_id`와`parent_website_route``를 기반으로 생성됩니다,
 Thank you for your email,이메일 주셔서 감사합니다,
 Thank you for your interest in subscribing to our updates,우리의 업데이 트에 가입에 관심을 가져 주셔서 감사합니다,
 Thank you for your message,메시지를 수신했습니다,
