--- a/frappe/translations/ku.csv
+++ b/frappe/translations/ku.csv
@@ -2428,7 +2428,7 @@ Text Align,Nivîsar di Paris,
 Text Color,text Color,
 Text Content,Content text,
 Text Editor,Nawy text,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Text ji bo Link to Web Page kiriyî werin nîşandan, ger ev form a rûpel web. route Link wê were, bi giştî li ser bingeha `page_name` û` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Text ji bo Link to Web Page kiriyî werin nîşandan, ger ev form a rûpel web. route Link wê were, bi giştî li ser bingeha `page_id` û` parent_website_route`",
 Thank you for your email,Spas dikim ji bo email te,
 Thank you for your interest in subscribing to our updates,Spas dikim ji bo berjewendiyên xwe di careke to updates me,
 Thank you for your message,Spas dikim ji bo peyama te,
