--- a/frappe/translations/lo.csv
+++ b/frappe/translations/lo.csv
@@ -2428,7 +2428,7 @@ Text Align,ຂໍ້ຄວາມຈັດ,
 Text Color,ຂໍ້ຄວາມສີ,
 Text Content,ເນື້ອໃນຂໍ້ຄວາມ,
 Text Editor,ບັນນາທິການຂໍ້ຄວາມ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,ຂໍ້ຄວາມທີ່ຈະສະແດງສໍາລັບການເຊື່ອມຕໍ່ກັບຫນ້າເວັບໄຊຕ໌ຖ້າຫາກວ່າຮູບແບບນີ້ມີຫນ້າເວັບໄຊຕ໌. ເສັ້ນທາງເຊື່ອມຕໍ່ຈະໄດ້ຮັບການສ້າງອັດຕະໂນມັດຂຶ້ນຢູ່ກັບ `page_name` ແລະ` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,ຂໍ້ຄວາມທີ່ຈະສະແດງສໍາລັບການເຊື່ອມຕໍ່ກັບຫນ້າເວັບໄຊຕ໌ຖ້າຫາກວ່າຮູບແບບນີ້ມີຫນ້າເວັບໄຊຕ໌. ເສັ້ນທາງເຊື່ອມຕໍ່ຈະໄດ້ຮັບການສ້າງອັດຕະໂນມັດຂຶ້ນຢູ່ກັບ `page_id` ແລະ` parent_website_route`,
 Thank you for your email,ຂໍຂອບໃຈທ່ານສໍາລັບການອີເມວຂອງທ່ານ,
 Thank you for your interest in subscribing to our updates,ຂໍຂອບໃຈທ່ານສໍາລັບຄວາມສົນໃຈຂອງທ່ານໃນການສະຫມັກຮັບການປັບປຸງຂອງພວກເຮົາ,
 Thank you for your message,ຂໍຂອບໃຈທ່ານສໍາລັບຂໍ້ຄວາມຂອງທ່ານ,
