--- a/frappe/translations/lt.csv
+++ b/frappe/translations/lt.csv
@@ -2428,7 +2428,7 @@ Text Align,teksto lygiavimas,
 Text Color,teksto spalva,
 Text Content,tekstas turinys,
 Text Editor,teksto redaktorius,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Tekstas rodomas nuorodą į tinklapį, jei ši forma turi tinklalapį. Nuoroda maršrutas bus automatiškai generuojama, remiantis &quot;page_name` ir` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Tekstas rodomas nuorodą į tinklapį, jei ši forma turi tinklalapį. Nuoroda maršrutas bus automatiškai generuojama, remiantis &quot;page_id` ir` parent_website_route`",
 Thank you for your email,Ačiu už tavo elektroninį laišką,
 Thank you for your interest in subscribing to our updates,Dėkojame už Jūsų susidomėjimą prenumeruoti mūsų naujienas,
 Thank you for your message,Dėkojame už jūsų pranešimą,
