--- a/frappe/translations/lv.csv
+++ b/frappe/translations/lv.csv
@@ -2428,7 +2428,7 @@ Text Align,Teksta Izlīdzināt,
 Text Color,Teksta Color,
 Text Content,teksta saturs,
 Text Editor,Teksta redaktors,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Teksts tiks rādīts Saite uz tīmekļa lapu, ja šī forma ir mājas lapā. Saite maršruts tiks automātiski radīts, balstoties uz `page_name` un` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Teksts tiks rādīts Saite uz tīmekļa lapu, ja šī forma ir mājas lapā. Saite maršruts tiks automātiski radīts, balstoties uz `page_id` un` parent_website_route`",
 Thank you for your email,Paldies par jūsu e-pastu,
 Thank you for your interest in subscribing to our updates,Paldies par jūsu interesi par Parakstoties uz mūsu jaunumiem,
 Thank you for your message,Paldies par jūsu ziņu,
