--- a/frappe/translations/mk.csv
+++ b/frappe/translations/mk.csv
@@ -2428,7 +2428,7 @@ Text Align,Текст Порамни,
 Text Color,Боја на текст,
 Text Content,текст содржина,
 Text Editor,Уредувачот на текст,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Текст, за да бидат прикажани за линк на веб страната ако оваа форма има веб страница. Линк пат ќе бидат автоматски генерирани врз основа на `page_name` и` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Текст, за да бидат прикажани за линк на веб страната ако оваа форма има веб страница. Линк пат ќе бидат автоматски генерирани врз основа на `page_id` и` parent_website_route`",
 Thank you for your email,Ви благодариме за вашата e-mail,
 Thank you for your interest in subscribing to our updates,Ви благодариме за вашиот интерес во зачлениш на нашиот ажурирања,
 Thank you for your message,Ви благодариме за Вашата порака,
