--- a/frappe/translations/ml.csv
+++ b/frappe/translations/ml.csv
@@ -2428,7 +2428,7 @@ Text Align,വാചക വിന്യാസം,
 Text Color,ടെക്സ്റ്റ് നിറം,
 Text Content,വാചക ഉള്ളടക്കം,
 Text Editor,ടെക്സ്റ്റ് എഡിറ്റർ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,ഉള്ളടക്കം ഈ ഫോം ഒരു വെബ് പേജ് ഉണ്ട് എങ്കിൽ വെബ് പേജ് ലേക്ക് ലിങ്ക് വേണ്ടി പ്രദർശിപ്പിക്കാൻ. ലിങ്ക് റൂട്ടിൽ സ്വയം `page_name` രൂപയായും parent_website_route` അടിസ്ഥാനമാക്കി നിർമ്മിക്കപ്പെടും,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,ഉള്ളടക്കം ഈ ഫോം ഒരു വെബ് പേജ് ഉണ്ട് എങ്കിൽ വെബ് പേജ് ലേക്ക് ലിങ്ക് വേണ്ടി പ്രദർശിപ്പിക്കാൻ. ലിങ്ക് റൂട്ടിൽ സ്വയം `page_id` രൂപയായും parent_website_route` അടിസ്ഥാനമാക്കി നിർമ്മിക്കപ്പെടും,
 Thank you for your email,നിങ്ങളുടെ ഇമെയിൽ നന്ദി,
 Thank you for your interest in subscribing to our updates,നമ്മുടെ അപ്ഡേറ്റുകൾ സബ്സ്ക്രൈബ് നിങ്ങളുടെ താൽപ്പര്യത്തിന് നന്ദി,
 Thank you for your message,നിങ്ങളുടെ സന്ദേശം നന്ദി,
