--- a/frappe/translations/mr.csv
+++ b/frappe/translations/mr.csv
@@ -2428,7 +2428,7 @@ Text Align,मजकूर संरेखित,
 Text Color,मजकूर रंग,
 Text Content,मजकूर सामग्री,
 Text Editor,पाठ्य संपादक,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,हा फॉर्म वेब पृष्ठ आहे तर मजकूर वेब पृष्ठ लिंक प्रदर्शित करा . लिंक मार्ग आपोआप page_name` आणि `` parent_website_route`  वर  आधारित तयार होईल,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,हा फॉर्म वेब पृष्ठ आहे तर मजकूर वेब पृष्ठ लिंक प्रदर्शित करा . लिंक मार्ग आपोआप page_id` आणि `` parent_website_route`  वर  आधारित तयार होईल,
 Thank you for your email,आपला ई-मेल धन्यवाद,
 Thank you for your interest in subscribing to our updates,आमच्या अद्यतने सदस्यता मध्ये रुची धन्यवाद,
 Thank you for your message,आपला संदेश धन्यवाद,
