--- a/frappe/translations/ms.csv
+++ b/frappe/translations/ms.csv
@@ -2428,7 +2428,7 @@ Text Align,Teks Align,
 Text Color,Warna Teks,
 Text Content,kandungan teks,
 Text Editor,Editor teks,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Teks yang akan dipaparkan untuk Pautan ke Laman Web jika borang ini mempunyai laman web. Laluan Link akan dijana secara automatik berdasarkan `page_name` dan` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Teks yang akan dipaparkan untuk Pautan ke Laman Web jika borang ini mempunyai laman web. Laluan Link akan dijana secara automatik berdasarkan `page_id` dan` parent_website_route`,
 Thank you for your email,Terima kasih kerana e-mel anda,
 Thank you for your interest in subscribing to our updates,Terima kasih kerana berminat dengan melanggan kemas kini kami,
 Thank you for your message,Terima kasih kerana pesanan anda,
