--- a/frappe/translations/my.csv
+++ b/frappe/translations/my.csv
@@ -2428,7 +2428,7 @@ Text Align,text align,
 Text Color,စာသားအရောင်,
 Text Content,စာသားအကြောင်းအရာ,
 Text Editor,text Editor ကို,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,စာသားဤပုံစံဝဘ်စာမျက်နှာရှိလျှင်က်ဘ်စာမျက်နှာ၏ Link များအတွက်ပြသခံရဖို့။ Link ကိုလမ်းကြောင်းကိုအလိုအလျောက် `page_name` နှင့်` parent_website_route` အပေါ်အခြေခံပြီး generated လိမ့်မည်,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,စာသားဤပုံစံဝဘ်စာမျက်နှာရှိလျှင်က်ဘ်စာမျက်နှာ၏ Link များအတွက်ပြသခံရဖို့။ Link ကိုလမ်းကြောင်းကိုအလိုအလျောက် `page_id` နှင့်` parent_website_route` အပေါ်အခြေခံပြီး generated လိမ့်မည်,
 Thank you for your email,သင့်ရဲ့အီးမေးလ်အတွက်ကျေးဇူးတင်ပါသည်,
 Thank you for your interest in subscribing to our updates,ကျွန်တော်တို့ရဲ့ updates ကိုယူခြင်းအတွက်သင့်ရဲ့အကျိုးစီးပွားအတွက်ကျေးဇူးတင်ပါသည်,
 Thank you for your message,သင့်ရဲ့မက်ဆေ့ခ်ျကိုကျေးဇူးတင်ပါသည်,
