--- a/frappe/translations/pl.csv
+++ b/frappe/translations/pl.csv
@@ -2428,7 +2428,7 @@ Text Align,Wyrównie tekst,
 Text Color,Kolor tekstu,
 Text Content,Zawartość tekstowa,
 Text Editor,Edytor tekstu,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Tekst, który będzie wyświetlany na link do strony WWW, jeśli ta forma ma stronę internetową. Trasa link zostanie automatycznie generowane na podstawie `page_name` i` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Tekst, który będzie wyświetlany na link do strony WWW, jeśli ta forma ma stronę internetową. Trasa link zostanie automatycznie generowane na podstawie `page_id` i` parent_website_route`",
 Thank you for your email,Dziękujemy za wiadomość,
 Thank you for your interest in subscribing to our updates,Dziękujemy za zainteresowanie w subskrypcji naszych aktualizacjach,
 Thank you for your message,Dziękujemy za wiadomości,
