--- a/frappe/translations/ps.csv
+++ b/frappe/translations/ps.csv
@@ -2428,7 +2428,7 @@ Text Align,متن داسې ترتیب کړي,
 Text Color,د متن رنګ,
 Text Content,متن منځپانګه,
 Text Editor,متن اېډېټر,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,د پلټلو لپاره څه ته لینک ګورت پاڼه نندارې ته شي که دغه فورمه د ګورت پاڼه لري. لینک لاره هم په اتوماتيک ډول د `` page_name` او parent_website_route` پر بنسټ د تولید شوی,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,د پلټلو لپاره څه ته لینک ګورت پاڼه نندارې ته شي که دغه فورمه د ګورت پاڼه لري. لینک لاره هم په اتوماتيک ډول د `` page_id` او parent_website_route` پر بنسټ د تولید شوی,
 Thank you for your email,د بریښنالیک څخه مو مننه,
 Thank you for your interest in subscribing to our updates,په خپلو تازه ګډون ستاسو د ګټو لپاره مننه,
 Thank you for your message,تاسو د خپل پيغام مننه,
