--- a/frappe/translations/pt.csv
+++ b/frappe/translations/pt.csv
@@ -2428,7 +2428,7 @@ Text Align,Alinhar texto,
 Text Color,Cor do texto,
 Text Content,conteúdo de texto,
 Text Editor,Editor de Texto,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,O texto a ser exibido para link para a página da Web se esta forma tem uma página web. Rota Link será gerada automaticamente com base em `` page_name` e parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,O texto a ser exibido para link para a página da Web se esta forma tem uma página web. Rota Link será gerada automaticamente com base em `` page_id` e parent_website_route`,
 Thank you for your email,Obrigado pelo seu e-mail,
 Thank you for your interest in subscribing to our updates,Obrigado por seu interesse na subscrição de nossas atualizações,
 Thank you for your message,Obrigado por sua mensagem,
