--- a/frappe/translations/ro.csv
+++ b/frappe/translations/ro.csv
@@ -2428,7 +2428,7 @@ Text Align,Alinierea textului,
 Text Color,Culoare text,
 Text Content,Conținut text,
 Text Editor,Editor de text,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Text de afișat pentru link catre pagina de web în cazul în care acest formular are o pagină web. Link traseu vor fi generate automat pe baza `` page_name` și parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Text de afișat pentru link catre pagina de web în cazul în care acest formular are o pagină web. Link traseu vor fi generate automat pe baza `` page_id` și parent_website_route`,
 Thank you for your email,Vă mulțumim pentru e-mail,
 Thank you for your interest in subscribing to our updates,Vă mulțumim pentru interesul dumneavoastră în abonarea la actualizările noastre,
 Thank you for your message,Vă mulțumim pentru mesajul dvs.,
