--- a/frappe/translations/ru.csv
+++ b/frappe/translations/ru.csv
@@ -2401,7 +2401,7 @@ Text Align,Выравнивание текста,
 Text Color,Цвет текста,
 Text Content,Содержимое текста,
 Text Editor,Редактор текста,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Текст, отображаемый в течение ссылка на веб-страницу, если эта форма имеет веб-страницу. Маршрут Ссылка будет генерироваться автоматически на основе `page_name` и` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Текст, отображаемый в течение ссылка на веб-страницу, если эта форма имеет веб-страницу. Маршрут Ссылка будет генерироваться автоматически на основе `page_id` и` parent_website_route`",
 Thank you for your email,Спасибо за ваше письмо!,
 Thank you for your interest in subscribing to our updates,Спасибо за ваш интерес и подписку,
 Thank you for your message,Спасибо за ваше сообщение,
