--- a/frappe/translations/rw.csv
+++ b/frappe/translations/rw.csv
@@ -2428,7 +2428,7 @@ Text Align,Guhuza inyandiko,
 Text Color,Ibara ry&#39;inyandiko,
 Text Content,Ibirimo,
 Text Editor,Muhinduzi wanditse,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Inyandiko igomba kwerekanwa Ihuza Urubuga niba iyi fomu ifite page y&#39;urubuga. Inzira ihuza izahita ikorwa hashingiwe kuri `page_nzina` na` umubyeyi_urubuga_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Inyandiko igomba kwerekanwa Ihuza Urubuga niba iyi fomu ifite page y&#39;urubuga. Inzira ihuza izahita ikorwa hashingiwe kuri `page_nzina` na` umubyeyi_urubuga_route`,
 Thank you for your email,Urakoze kuri imeri yawe,
 Thank you for your interest in subscribing to our updates,Urakoze kubwinyungu zawe zo kwiyandikisha kumakuru yacu,
 Thank you for your message,Urakoze kubutumwa bwawe,
