--- a/frappe/translations/si.csv
+++ b/frappe/translations/si.csv
@@ -2428,7 +2428,7 @@ Text Align,පෙළ පෙළගස්වන්න,
 Text Color,අකුරු වර්ණය,
 Text Content,පෙළ අන්තර්ගත,
 Text Editor,පෙළ කර්තෘ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,පෙළ මෙම ආකෘති පත්රය වෙබ් පිටුවක් තිබේ නම් වෙබ් පිටු සබැඳිය සඳහා ප්රදර්ශනය කළ යුතුය. &#39;&#39; Page_name` හා &#39;parent_website_route` මත පදනම් ලින්ක් මාර්ගයේ ස්වයංක්රීයව නිර්මානය වනු ඇත,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,පෙළ මෙම ආකෘති පත්රය වෙබ් පිටුවක් තිබේ නම් වෙබ් පිටු සබැඳිය සඳහා ප්රදර්ශනය කළ යුතුය. &#39;&#39; Page_name` හා &#39;parent_website_route` මත පදනම් ලින්ක් මාර්ගයේ ස්වයංක්රීයව නිර්මානය වනු ඇත,
 Thank you for your email,ඔබගේ ඊ-තැපැල් ලිපිනය සඳහා ඔබට ස්තුතියි,
 Thank you for your interest in subscribing to our updates,අපගේ යාවත්කාලීන සඳහා දායක ඔබේ දායකත්වයට ස්තූතියි,
 Thank you for your message,ඔබගේ පණිවිඩයට ස්තුතියි,
