--- a/frappe/translations/sl.csv
+++ b/frappe/translations/sl.csv
@@ -2428,7 +2428,7 @@ Text Align,Besedilo Poravnava,
 Text Color,Barva besedila,
 Text Content,Besedilo vsebine,
 Text Editor,Text Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Besedilo, ki se prikaže za Povezava na spletno stran, če ima ta oblika spletne strani. Link Pot se bo samodejno ustvari na podlagi `page_name` in` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Besedilo, ki se prikaže za Povezava na spletno stran, če ima ta oblika spletne strani. Link Pot se bo samodejno ustvari na podlagi `page_id` in` parent_website_route`",
 Thank you for your email,Hvala za vaše e-pošte,
 Thank you for your interest in subscribing to our updates,Zahvaljujemo se vam za vaše zanimanje za prijavo na naših posodobitve,
 Thank you for your message,Hvala za vaše sporočilo,
