--- a/frappe/translations/sr.csv
+++ b/frappe/translations/sr.csv
@@ -2428,7 +2428,7 @@ Text Align,Текст Поравнај,
 Text Color,Боја текста,
 Text Content,tekst Садржај,
 Text Editor,Текст Уредник,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Текст који ће бити приказан на Линк то Веб Паге ако овај формулар има веб страницу. Линк рута ће бити аутоматски генерисан на основу `` паге_наме` и парент_вебсите_роуте`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Текст који ће бити приказан на Линк то Веб Паге ако овај формулар има веб страницу. Линк рута ће бити аутоматски генерисан на основу `` паге_наме` и парент_вебсите_роуте`,
 Thank you for your email,Хвала вам на е-поште,
 Thank you for your interest in subscribing to our updates,Хвала вам на интересовању за претплате на нашим новостима,
 Thank you for your message,Хвала вам на поруку,
