--- a/frappe/translations/sv.csv
+++ b/frappe/translations/sv.csv
@@ -2428,7 +2428,7 @@ Text Align,Text Justera,
 Text Color,TEXTFÄRG,
 Text Content,textinnehåll,
 Text Editor,Textredigeraren,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Text som ska visas för Länk till webbsida om denna form har en webbsida. Länken kommer att genereras automatiskt baserat på `page_name` och` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Text som ska visas för Länk till webbsida om denna form har en webbsida. Länken kommer att genereras automatiskt baserat på `page_id` och` parent_website_route`,
 Thank you for your email,Tack för ditt email,
 Thank you for your interest in subscribing to our updates,Tack för ditt intresse för att prenumerera på våra nyheter,
 Thank you for your message,Tack för ditt meddelande,
