--- a/frappe/translations/sw.csv
+++ b/frappe/translations/sw.csv
@@ -2428,7 +2428,7 @@ Text Align,Nakala Jiunge,
 Text Color,Rangi ya Nakala,
 Text Content,Maudhui ya Nakala,
 Text Editor,Mhariri wa Nakala,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Nakala ya kuonyeshwa kwa Kiungo kwenye Ukurasa wa Wavuti ikiwa fomu hii ina ukurasa wa wavuti. Njia ya kiungo itazalishwa moja kwa moja kulingana na `ukurasa_name` na` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Nakala ya kuonyeshwa kwa Kiungo kwenye Ukurasa wa Wavuti ikiwa fomu hii ina ukurasa wa wavuti. Njia ya kiungo itazalishwa moja kwa moja kulingana na `ukurasa_name` na` parent_website_route`,
 Thank you for your email,Asante kwa barua pepe yako,
 Thank you for your interest in subscribing to our updates,Asante kwa maslahi yako katika kujiunga na sasisho zetu,
 Thank you for your message,Asante kwa ujumbe wako,
