--- a/frappe/translations/ta.csv
+++ b/frappe/translations/ta.csv
@@ -2428,7 +2428,7 @@ Text Align,உரை சீரமை,
 Text Color,உரை வண்ணம்,
 Text Content,உரை உள்ளடக்க,
 Text Editor,உரை திருத்தி,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,இந்த படிவத்தை ஒரு வலை பக்கம் உள்ளது என்றால் உரை வலை பக்கம் இணைப்பு காட்டப்படும். இணைப்பு பாதை தானாக page_name` மற்றும் `parent_website_route`` அடிப்படையில்,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,இந்த படிவத்தை ஒரு வலை பக்கம் உள்ளது என்றால் உரை வலை பக்கம் இணைப்பு காட்டப்படும். இணைப்பு பாதை தானாக page_id` மற்றும் `parent_website_route`` அடிப்படையில்,
 Thank you for your email,உங்கள் மின்னஞ்சல் நன்றி,
 Thank you for your interest in subscribing to our updates,எங்கள் மேம்படுத்தல்கள் சந்தாதாரராக உங்கள் ஆர்வத்திற்கு நன்றி,
 Thank you for your message,உங்கள் செய்தி நன்றி,
