--- a/frappe/translations/te.csv
+++ b/frappe/translations/te.csv
@@ -2428,7 +2428,7 @@ Text Align,టెక్స్ట్ సమలేఖనం,
 Text Color,టెక్స్ట్ రంగు,
 Text Content,టెక్స్ట్ కంటెంట్,
 Text Editor,టెక్స్ట్ ఎడిటర్,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,ఈ ఫారమ్ వెబ్ పేజీ కలిగి ఉంటే టెక్స్ట్ వెబ్ పేజీ లింక్ ప్రదర్శించబడుతుంది. లింక్ మార్గం స్వయంచాలకంగా page_name` మరియు `parent_website_route`` ఆధారంగా ఉత్పత్తి అవుతుంది,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,ఈ ఫారమ్ వెబ్ పేజీ కలిగి ఉంటే టెక్స్ట్ వెబ్ పేజీ లింక్ ప్రదర్శించబడుతుంది. లింక్ మార్గం స్వయంచాలకంగా page_id` మరియు `parent_website_route`` ఆధారంగా ఉత్పత్తి అవుతుంది,
 Thank you for your email,మీ ఇమెయిల్ ధన్యవాదాలు,
 Thank you for your interest in subscribing to our updates,మా నవీకరణలకు చందా మీ ఆసక్తికి ధన్యవాదాలు,
 Thank you for your message,మీ సందేశం ధన్యవాదాలు,
