--- a/frappe/translations/th.csv
+++ b/frappe/translations/th.csv
@@ -2428,7 +2428,7 @@ Text Align,ข้อความตําแหน่ง,
 Text Color,สีของข้อความ,
 Text Content,เนื้อหาข้อความ,
 Text Editor,แก้ไขข้อความ,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,ข้อความที่จะแสดงสำหรับการเชื่อมโยงไปยังหน้าเว็บถ้าแบบฟอร์มนี้มีหน้าเว็บ เส้นทางการเชื่อมโยงจะถูกสร้างขึ้นโดยอัตโนมัติตาม `page_name` และ` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,ข้อความที่จะแสดงสำหรับการเชื่อมโยงไปยังหน้าเว็บถ้าแบบฟอร์มนี้มีหน้าเว็บ เส้นทางการเชื่อมโยงจะถูกสร้างขึ้นโดยอัตโนมัติตาม `page_id` และ` parent_website_route`,
 Thank you for your email,ขอบคุณสำหรับอีเมลของคุณ,
 Thank you for your interest in subscribing to our updates,ขอบคุณที่ให้ความสนใจในการสมัครรับการปรับปรุงของเรา,
 Thank you for your message,ขอบคุณสำหรับข้อความของคุณ,
