--- a/frappe/translations/uk.csv
+++ b/frappe/translations/uk.csv
@@ -2428,7 +2428,7 @@ Text Align,Text Align,
 Text Color,Колір тексту,
 Text Content,Text Content,
 Text Editor,Текстовий редактор,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Текст, відображений протягом Посилання на веб-сторінку, якщо ця форма має веб-сторінку. Маршрут Посилання буде автоматично генерується на основі `` page_name` і parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Текст, відображений протягом Посилання на веб-сторінку, якщо ця форма має веб-сторінку. Маршрут Посилання буде автоматично генерується на основі `` page_id` і parent_website_route`",
 Thank you for your email,Дякую вам за вашу електронну пошту,
 Thank you for your interest in subscribing to our updates,Дякуємо за вашу зацікавленість у новинах проекту,
 Thank you for your message,Дякую за повідомлення,
