--- a/frappe/translations/ur.csv
+++ b/frappe/translations/ur.csv
@@ -2428,7 +2428,7 @@ Text Align,متن سیدھ کریں,
 Text Color,متن کا رنگ,
 Text Content,متن کے مواد,
 Text Editor,ٹیکسٹ ایڈیٹر,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,اس فارم کو ایک ویب کے صفحے ہے تو متن کے ویب صفحے پر لنک کے لئے دکھایا جا کرنا. لنک راستہ خود کار طریقے سے page_name` اور `` parent_website_route` کی بنیاد پر پیدا کیا جائے گا,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,اس فارم کو ایک ویب کے صفحے ہے تو متن کے ویب صفحے پر لنک کے لئے دکھایا جا کرنا. لنک راستہ خود کار طریقے سے page_id` اور `` parent_website_route` کی بنیاد پر پیدا کیا جائے گا,
 Thank you for your email,آپ کا ای میل کرنے کے لئے شکریہ,
 Thank you for your interest in subscribing to our updates,ہماری اپ ڈیٹ کی رکنیت میں آپ کی دلچسپی کے لئے آپ کا شکریہ,
 Thank you for your message,اپنے پیغام کے لئے آپ کا شکریہ,
