--- a/frappe/translations/uz.csv
+++ b/frappe/translations/uz.csv
@@ -2428,7 +2428,7 @@ Text Align,Matnni tekislang,
 Text Color,Matn rangi,
 Text Content,Matn mazmuni,
 Text Editor,Matn tahrirlovchisi,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Ushbu forma veb-sahifasi bo&#39;lsa, Veb-sahifaga ulanish uchun ko&#39;rsatiladigan matn. Ulanish yo&#39;nalishi avtomatik ravishda &quot;page_name&quot; va &quot;parent_website_route&quot; asosida yaratiladi",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Ushbu forma veb-sahifasi bo&#39;lsa, Veb-sahifaga ulanish uchun ko&#39;rsatiladigan matn. Ulanish yo&#39;nalishi avtomatik ravishda &quot;page_id&quot; va &quot;parent_website_route&quot; asosida yaratiladi",
 Thank you for your email,E-pochtangiz uchun rahmat,
 Thank you for your interest in subscribing to our updates,Bizning yangilanishlarimizga qiziqish bildirganingiz uchun tashakkur,
 Thank you for your message,Xabaringiz uchun rahmat,
