--- a/frappe/translations/vi.csv
+++ b/frappe/translations/vi.csv
@@ -2428,7 +2428,7 @@ Text Align,Căn lề văn bản,
 Text Color,Màu văn bản,
 Text Content,Nội dung văn bản,
 Text Editor,Trình soạn thảo văn bản,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Văn bản sẽ được hiển thị cho liên kết đến trang Web nếu hình thức này có một trang web. Tuyến đường liên kết sẽ được tự động được tạo ra dựa trên `và` tên_trang` đường dẫn _ trang web _ lớn`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Văn bản sẽ được hiển thị cho liên kết đến trang Web nếu hình thức này có một trang web. Tuyến đường liên kết sẽ được tự động được tạo ra dựa trên `và` tên_trang` đường dẫn _ trang web _ lớn`,
 Thank you for your email,Cảm ơn vì email này,
 Thank you for your interest in subscribing to our updates,cảm ơn vì đã quan tâm đến việc đăng ký theo dõi các cập nhật của chúng tôi,
 Thank you for your message,Cảm ơn vì tin nhắn của bạn,
