--- a/frappe/translations/zh.csv
+++ b/frappe/translations/zh.csv
@@ -2428,7 +2428,7 @@ Text Align,文本对齐,
 Text Color,文字颜色,
 Text Content,文本内容,
 Text Editor,文本编辑器,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,如果此表单有网页的话，请输入页面链接的显示文本。链接会自动按照`页面名称`和`上级网站链接`生成,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,如果此表单有网页的话，请输入页面链接的显示文本。链接会自动按照`页面名称`和`上级网站链接`生成,
 Thank you for your email,谢谢您的邮件,
 Thank you for your interest in subscribing to our updates,感谢您订阅我们的更新,
 Thank you for your message,谢谢您的留言,
