--- a/frappe/translations/nl.csv
+++ b/frappe/translations/nl.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekst uitlijnen,
 Text Color,Tekst Kleur,
 Text Content,text Content,
 Text Editor,Text Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Tekst die moet worden weergegeven Link naar webpagina wanneer dit formulier heeft een webpagina. Link route wordt automatisch gegenereerd worden op basis van `page_name` en` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Tekst die moet worden weergegeven Link naar webpagina wanneer dit formulier heeft een webpagina. Link route wordt automatisch gegenereerd worden op basis van `page_id` en` parent_website_route`,
 Thank you for your email,Bedankt voor je email,
 Thank you for your interest in subscribing to our updates,Dank u voor uw interesse in een abonnement op onze updates,
 Thank you for your message,Dank u voor uw bericht,
