--- a/frappe/translations/no.csv
+++ b/frappe/translations/no.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekst Align,
 Text Color,Tekstfarge,
 Text Content,tekst~~POS=TRUNC,
 Text Editor,Text Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,Tekst som skal vises for Link til webside om denne formen har en nettside. Link rute blir automatisk generert basert på `page_name` og` parent_website_route`,
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,Tekst som skal vises for Link til webside om denne formen har en nettside. Link rute blir automatisk generert basert på `page_id` og` parent_website_route`,
 Thank you for your email,Takk for din e-post,
 Thank you for your interest in subscribing to our updates,Takk for din interesse i å abonnere på våre oppdateringer,
 Thank you for your message,Takk for din melding,
