--- a/frappe/translations/pt-BR.csv
+++ b/frappe/translations/pt-BR.csv
@@ -2428,7 +2428,7 @@ Text Align,Alinhar Texto,
 Text Color,Cor do texto,
 Text Content,conteúdo de texto,
 Text Editor,Editor de Texto,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"O texto a ser exibido para o link da página da web, se este formulário tem uma página web. Um link será gerado automaticamente com base em ` page_name` e `parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"O texto a ser exibido para o link da página da web, se este formulário tem uma página web. Um link será gerado automaticamente com base em ` page_id` e `parent_website_route`",
 Thank you for your email,Obrigado pelo seu email,
 Thank you for your interest in subscribing to our updates,Agradecemos seu interesse em assinar a newsletter do site,
 Thank you for your message,Obrigado por sua mensagem,
