--- a/frappe/translations/sq.csv
+++ b/frappe/translations/sq.csv
@@ -2428,7 +2428,7 @@ Text Align,Tekst Align,
 Text Color,Tekst Color,
 Text Content,Tekst Content,
 Text Editor,Text Editor,
-Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_name` and `parent_website_route`,"Tekst për t&#39;u shfaqur për Link në web faqe, nëse kjo formë ka një faqe web. Rrugë Link do të jetë e gjeneruar automatikisht bazuar në `page_name` dhe` parent_website_route`",
+Text to be displayed for Link to Web Page if this form has a web page. Link route will be automatically generated based on `page_id` and `parent_website_route`,"Tekst për t&#39;u shfaqur për Link në web faqe, nëse kjo formë ka një faqe web. Rrugë Link do të jetë e gjeneruar automatikisht bazuar në `page_id` dhe` parent_website_route`",
 Thank you for your email,Faleminderit për email-it tuaj,
 Thank you for your interest in subscribing to our updates,Faleminderit për interesimin tuaj në nënshkrimit për përditësime tonë,
 Thank you for your message,Faleminderit për mesazhin tuaj,
